Method invokes inefficient Number constructor; use static valueOf instead
git-svn-id: http://svn.code.sf.net/p/cls-motu/code/trunk@3368 4fb39819-1ace-417d-baf3-7cd5f5b47953